# gpa

./: .gitignore  COMMIT_EDITMSG  PKG-INFO  README.md  SOURCES.txt  __main__.py  cli.py  config.py  conftest.py  entry_points.txt  filesync.py  gitpush-0.1.0-py3-none-any.whl  gitpush-0.1.2-py3-none-any.whl  hope.txt  index  orchestrator.py  pyproject.toml  pyvenv.cfg  state.py  test_cli.py  test_config.py  test_filesync.py  test_gitops.py  test_integration.py  test_orchestrator.py  test_state.py  utils.py  wizard.py
docs/superpowers/plans/: 2026-06-17-gpa-implementation.md
docs/superpowers/specs/: 2026-06-17-gpa-tool-design.md
gitpush/: __init__.py  cli.py  gitops.py
lib/gitpush/: cli.py  config.py  filesync.py  orchestrator.py  reporter.py  state.py  wizard.py
logs/: HEAD
refs/heads/: master
superpowers/plans/: 2026-07-08-single-repo-push.md
superpowers/specs/: 2026-07-08-single-repo-push-design.md
tests/: test_reporter.py
v/cache/: nodeids
